# Stock-Exchange

./: CMakeLists.txt  README.md  config.xml  main.py
.github/workflows/: build.yml
Gateway/: Config.h  Fix.h  FixMessageDispatcher.h  Gateway.cpp  Gateway.h  main.cpp
Gateway/Network/: FIX.h  TcpEpollListener.cpp  TcpEpollListener.h
Gateway/Scheduler/: GatewayScheduler.h
common/: enum.h  exception.h
common/BlockingQueue/: MutexBlockingQueue.h
common/Scheduler/: Scheduler.cpp  Scheduler.h
common/Scheduler/Worker/: Task.h  Worker.cpp  Worker.h
common/ipc/: ScopedFileLock.h  SharedMemory.cpp  SharedMemory.h  SharedMemory_Consumer.cpp  SharedMemory_Producer.cpp  String.h  const.h  messaging.h
common/xml/: XMLNode.h  XMLReader.h
process2/: main.cpp
process2/Sources/Config/: Config.h
process2/Sources/IPC/: Consumer.h
scripts/: install-deps.sh  run-tests.sh
tests/: test_gateway.cpp  test_ipc_crash.cpp
